--- a/recette.css
+++ b/recette.css
@@ -29,9 +29,8 @@
         div.contenu
         {
             background-color: white;
-            margin: 60px 10% 80px 10%;
-            padding: 0 30px 30px 30px;
-            min-width: 350px;
+            margin: 40px 8px 40px 8px;
+            padding: 0 8x 20px 8px;
             box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
             overflow: visible;
 
@@ -89,20 +88,20 @@
             width: 100%; 
             color: white; 
             background-color: #6C829DC0; 
-            height: 80px;
+            height: 50px;
 
         }
 
         table.info td
         {
             text-align: center;
-            font-size: 14px;
+            font-size: 12px;
             vertical-align: top;
         }
 
         table.info th
         {
-            font-size: 16px;
+            font-size: 14px;
             vertical-align: bottom;
             padding-bottom: 8px;
         }
@@ -118,7 +117,7 @@
 
         div.colonne
         {
-            width: 45%;
+            width: 100%;
             margin-top: 20px;
         }
 
@@ -134,12 +133,6 @@
         div.colonne1
         {
             display: inline-block;
-            margin-right: 10%;
-        }
-
-        div.colonne2
-        {
-            float: right;
         }
 
         div.liste_ingredients p
@@ -183,4 +176,61 @@
         {
             height: 40px;
         }
+
+        /*Styles pour ordinateur*/
+        @media only screen and (min-width: 768px)
+        {
+            div.contenu
+            {
+                margin: 60px 10% 80px 10%;
+                padding: 0 30px 30px 30px;    
+                min-width: 350px;    
+            }
+
+            table.info
+            {
+                height: 80px;
+    
+            }
+    
+            table.info td
+            {
+                font-size: 14px;
+            }
+    
+            table.info th
+            {
+                font-size: 16px;
+            }    
+
+            div.colonne
+            {
+                width: 45%;
+            }
+        
+            div.colonne1
+            {
+                margin-right: 10%;
+            }
+    
+            div.colonne2
+            {
+                float: right;
+            }
+    
+        }
+
+        @media only screen and (min-width: 900px)
+        {
+            div.contenu
+            {
+                margin-left: auto;
+                margin-right: auto;
+                width: 645px;    
+
+            }
+
+        }
+
+
 
